# django-ninja-extra

./: .coveragerc  .dockerignore  .flake8  .flask8  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  index.html  local_install.sh  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-docs.txt  requirements-tests.txt  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: publish.yml  test.yml  test_full.yml
api_controller/: index.html
api_controller/api_controller_async_permission/: index.html
api_controller/api_controller_permission/: index.html
api_controller/api_controller_route/: index.html
api_controller/api_controller_router/: index.html
api_controller/model_controller/: index.html
api_controller/model_controller/01_getting_started/: index.html
api_controller/model_controller/02_model_configuration/: index.html
api_controller/model_controller/03_model_service/: index.html
api_controller/model_controller/04_parameters/: index.html
contribution/: index.html
dependency-injection/: index.html
dependency-injection/service_module_injector/: index.html
dependency-injection/testing/: index.html
docs/: Makefile  contribution.md  index.md  mkdocs.yml  requirements.txt  route_context.md  service_module_injector.md  settings.md
docs/api_controller/: api_controller_async_permission.md  api_controller_permission.md  api_controller_route.md  api_controller_router.md  index.md  model_controller.md
docs/api_controller/model_controller/: 01_getting_started.md  02_model_configuration.md  03_model_service.md  04_parameters.md  05_mixins.md
docs/dependency-injection/: index.md  testing.md
docs/docs/: index.md  ninja_schema.md  service_module_injector.md  settings.md
docs/docs/api_controller/: api_controller_permission.md  api_controller_route.md  index.md
docs/docs/tutorial/: api_controller.md  api_controller_permission.md  api_controller_route.md  api_controller_router.md  authentication.md  body_request.md  custom_exception.md  form.md  index.md  pagination.md  path.md  query.md  settings.md  testing.md  throttling.md  versioning.md
docs/model_controller/: index.md
docs/tutorial/: authentication.md  body_request.md  custom_exception.md  form.md  index.md  ordering.md  pagination.md  path.md  query.md  schema.md  searching.md  testing.md  throttling.md
ninja_extra/: __init__.py  apps.py  compatible.py  constants.py  context.py  databases.py  dependency_resolver.py  details.py  exceptions.py  generic.py  generics.py  helper.py  lazy.py  logger.py  main.py  modules.py  operation.py  ordering.py  pagination.py  router.py  schemas.py  searching.py  shortcuts.py  signals.py  status.py  types.py  urls.py  views.py
ninja_extra/conf/: __init__.py  decorator.py  package_settings.py  settings.py
ninja_extra/controllers/: __init__.py  base.py  mixins.py  model_controller_builder.py  registry.py  response.py  router.py  utils.py
ninja_extra/controllers/controller_route/: __init__.py  route.py  route_functions.py  router.py
ninja_extra/controllers/model/: __init__.py  builder.py  endpoints.py  interfaces.py  path_resolver.py  schemas.py  service.py
ninja_extra/controllers/route/: __init__.py  context.py  route_functions.py
ninja_extra/interfaces/: ordering.py  route_context.py  searching.py
ninja_extra/mixins/: __init__.py
ninja_extra/ordering/: __init__.py  decorator.py  models.py  operation.py
ninja_extra/pagination/: __init__.py  decorator.py  operations.py
ninja_extra/permissions/: __init__.py  base.py  common.py  mixins.py
ninja_extra/reflect/: __init__.py  _reflect.py  utils.py
ninja_extra/schemas/: __init__.py  response.py
ninja_extra/searching/: __init__.py  decorators.py  models.py  operations.py
ninja_extra/security/: __init__.py  api_key.py  http.py  session.py
ninja_extra/testing/: __init__.py  client.py
ninja_extra/threading/: __init__.py  sync_worker.py
ninja_extra/throttling/: __init__.py  decorator.py  model.py
route_context/: index.html
search/: search_index.json
service_module_injector/: index.html
settings/: index.html
tests/: conftest.py  controllers.py  main.py  models.py  pytest.ini  schemas.py  test_api_instance.py  test_async_auth.py  test_async_permissions.py  test_auth_inheritance.py  test_controller.py  test_controller_registry.py  test_controller_response.py  test_controller_router.py  test_dependency_resolver.py  test_deprecation_warnings.py  test_django_model.py  test_django_ninja_router.py  test_event_controller.py  test_exceptions.py  test_generic_patch.py  test_lazy_import.py  test_operation.py  test_ordering.py  test_pagination.py  test_path.py  test_permissions.py  test_query.py  test_reflect.py  test_route.py  test_searching.py  test_settings.py  test_shortcuts.py  test_status.py  test_streaming.py  test_testclient.py  test_testclient_with_controllers.py  test_throttle_inheritance.py  urls.py  utils.py
tests/test_model_controller/: async_samples.py  model_service_with_sample.py  samples.py  test_async_django_support.py  test_lookup_field.py  test_mixins.py  test_model_async_controller_operation.py  test_model_controller_configurations.py  test_model_controller_operation.py  test_model_controller_schema.py  test_model_endpoint_factory.py  test_model_service_operation.py  test_path_resolver.py
tests/test_security/: test_session.py
tests/test_throthling/: sample_models.py  test_controller_throttling.py  test_decorator.py  test_models.py  test_throttle_controller.py  test_throttle_decorator_on_controllers.py  test_throttling_xxf.py
tutorial/: index.html
tutorial/authentication/: index.html
tutorial/body_request/: index.html
tutorial/custom_exception/: index.html
tutorial/form/: index.html
tutorial/ordering/: index.html
tutorial/pagination/: index.html
tutorial/path/: index.html
tutorial/query/: index.html
tutorial/schema/: index.html
tutorial/searching/: index.html
tutorial/testing/: index.html
tutorial/throttling/: index.html
tutorial/versioning/: index.html
(+2 files in other folders)
